--- a/literature.bib
+++ b/literature.bib
@@ -110,6 +110,15 @@
   organization={IEEE}
 }
 
+@inproceedings{Brusilovsky1996,
+  title={ELM-ART: An intelligent tutoring system on World Wide Web},
+  author={Brusilovsky, Peter and Schwarz, Elmar and Weber, Gerhard},
+  booktitle={Intelligent tutoring systems},
+  pages={261--269},
+  year={1996},
+  organization={Springer}
+}
+
 @article{Seki2005,
   title={An adaptive sequencing method of the learning objects for the e-learning environment},
   author={Seki, Kazuya and Matsui, Tatsunori and Okamoto, Toshio},
@@ -119,6 +128,15 @@
   pages={54--71},
   year={2005},
   publisher={Wiley Online Library}
+}
+
+@inproceedings{Chi2010,
+  title={Do micro-level tutorial decisions matter: Applying reinforcement learning to induce pedagogical tutorial tactics},
+  author={Chi, Min and VanLehn, Kurt and Litman, Diane},
+  booktitle={Intelligent Tutoring Systems},
+  pages={224--234},
+  year={2010},
+  organization={Springer}
 }
 
 @article{Chen2008,
@@ -432,6 +450,28 @@
   organization={Springer}
 }
 
+@article{Brusilovsky2003a,
+  title={Course sequencing techniques for large-scale web-based education},
+  author={Brusilovsky, Peter and Vassileva, Julita},
+  journal={International Journal of Continuing Engineering Education and Life Long Learning},
+  volume={13},
+  number={1},
+  pages={75--94},
+  year={2003},
+  publisher={Inderscience}
+}
+
+@article{Brusilovsky2003b,
+  title={Adaptive and intelligent web-based educational systems},
+  author={Brusilovsky, Peter and Peylo, Christoph},
+  journal={International Journal of Artificial Intelligence in Education},
+  volume={13},
+  number={2},
+  pages={159--172},
+  year={2003},
+  publisher={IOS Press}
+}
+
 @article{Quinn2000,
   title={Learning objects and instruction components},
   author={Quinn, Clark and Hobbs, Samantha},
@@ -452,8 +492,17 @@
   organization={IEEE}
 }
 
+@inproceedings{deMarcos2009,
+  title={A new sequencing method in web-based education},
+  author={De-Marcos, Luis and Mart{\'\i}nez, Jos{\'e}-Javier and Gutierrez, Jos{\'e} Antonio and Barchino, Roberto and Guti{\'e}rrez, Jos{\'e} Mar{\'\i}a},
+  booktitle={Evolutionary Computation, 2009. CEC'09. IEEE Congress on},
+  pages={3219--3225},
+  year={2009},
+  organization={IEEE}
+}
+
 @article{Hilton2010,
-  title={The four ‘R’s of openness and ALMS analysis: frameworks for open educational resources},
+  title={{The four ‘R’s of openness and ALMS analysis: frameworks for open educational resources}},
   author={Hilton III, John and Wiley, David and Stein, Jared and Johnson, Aaron},
   journal={Open Learning},
   volume={25},
@@ -552,3 +601,68 @@
   pages={11--22},
   year={2012}
 }
+
+@book{Atkins2007,
+  title={A review of the open educational resources (OER) movement: Achievements, challenges, and new opportunities},
+  author={Atkins, Daniel Ewell and Brown, John Seely and Hammond, Allen L},
+  year={2007},
+  publisher={Creative common}
+}
+
+@techreport{UNESCO2002,
+	author={{UNESCO}},
+	title = {{Forum on the impact of Open Courseware for higher education in developing countries.}},
+	type = {Final report},
+    year = {2002},
+	institution = {UNESCO},
+	url = {http://unesdoc.unesco.org/images/0012/001285/128515e.pdf}
+}
+
+@article{Vanlehn2006,
+  title={The behavior of tutoring systems}
+  author={instellingsoverstijgende anlehn, Kurt},
+  journal={International journal of artificial intelligence in education},
+  volume={16},
+  number={3}
+  pages={227--265},
+  year={2006},
+  publisher={IOS Press}
+}
+
+@article{Koedinger2013,
+  title={New Potentials for Data-Driven Intelligent Tutoring System Development and Optimization.},
+  author={Koedinger, Kenneth R and Brunskill, Emma and d Baker, Ryan SI and McLaughlin, Elizabeth A and Stamper, John},
+  journal={AI Magazine},
+  volume={34},
+  number={3},
+  year={2013}
+}
+
+@incollection{Manouselis2011,
+  title={Recommender systems in technology enhanced learning},
+  author={Manouselis, Nikos and Drachsler, Hendrik and Vuorikari, Riina and Hummel, Hans and Koper, Rob},
+  booktitle={Recommender systems handbook},
+  pages={387--415},
+  year={2011},
+  publisher={Springer}
+}
+
+@inproceedings{Aerts2002,
+  title={Aha! version 2.0, more adaptation flexibility for authors},
+  author={Aerts, Ad and Smits, David and Stash, Natalia and Bra, Paul De},
+  booktitle={World Conference on E-Learning in Corporate, Government, Healthcare, and Higher Education},
+  volume={2002},
+  number={1},
+  pages={240--246},
+  year={2002}
+}
+
+@inproceedings{kravcik2004,
+  title={Evaluation of WINDS authoring environment},
+  author={Kravcik, Milos and Specht, Marcus and Oppermann, Reinhard},
+  booktitle={Adaptive Hypermedia and Adaptive Web-Based Systems},
+  pages={166--175},
+  year={2004},
+  organization={Springer}
+}
+
