--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass{memoir}
+\documentclass[oneside]{memoir}
 
 % Required to specify font color
 \usepackage[svgnames]{xcolor}
@@ -150,7 +150,7 @@
 \chapter{Background}
 \label{ch:background}
 \input{chapters/background.tex}
-\chapter{Curriculum Sequencing}
+\chapter{OER Sequencing}
 \label{ch:curriculum_sequencing}
 \input{chapters/educational_task.tex}
 \chapter{Approach}
