--- a/literature.bib
+++ b/literature.bib
@@ -657,7 +657,7 @@
   year={2002}
 }
 
-@inproceedings{kravcik2004,
+@inproceedings{Kravcik2004,
   title={Evaluation of WINDS authoring environment},
   author={Kravcik, Milos and Specht, Marcus and Oppermann, Reinhard},
   booktitle={Adaptive Hypermedia and Adaptive Web-Based Systems},
@@ -666,3 +666,13 @@
   organization={Springer}
 }
 
+@article{Verbert2012,
+  title={Semi-automatic assembly of learning resources},
+  author={Verbert, Katrien and Ochoa, Xavier and Derntl, Michael and Wolpers, Martin and Pardo, Abelardo and Duval, Erik},
+  journal={Computers \& Education},
+  volume={59},
+  number={4},
+  pages={1257--1272},
+  year={2012},
+  publisher={Elsevier}
+}
