--- a/thesis.tex
+++ b/thesis.tex
@@ -168,7 +168,7 @@
 \chapter{Results}
 \label{ch:results}
 \input{chapters/results.tex}
-\chapter{Discussion / Conclusion}
+\chapter{Conclusion / Discussion}
 \label{ch:discussion_conclusion}
 \input{chapters/discussion_conclusion.tex}
 \chapter{Future work}
