--- a/literature.bib
+++ b/literature.bib
@@ -676,3 +676,43 @@
   year={2012},
   publisher={Elsevier}
 }
+
+@article{Majerus2009,
+  title={Industrial melanism in the peppered moth, Biston betularia: an excellent teaching example of Darwinian evolution in action},
+  author={Majerus, Michael EN},
+  journal={Evolution: Education and Outreach},
+  volume={2},
+  number={1},
+  pages={63--74},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{Martin1997,
+  title={Island (migration) models: evolutionary algorithms based on punctuated equilibria},
+  author={Martin, Worthy N and Lienig, Jens and Cohoon, James P},
+  journal={Handbook of evolutionary computation},
+  volume={6},
+  number={3},
+  year={1997},
+  publisher={New York, USA: Oxford University Press, Inc., Institute of Physics Publishing Ltd.(IOP), and CRC Press, Inc}
+}
+
+@article{Whitley1999,
+  title={The island model genetic algorithm: On separability, population size and convergence},
+  author={Whitley, Darrell and Rana, Soraya and Heckendorn, Robert B},
+  journal={Journal of Computing and Information Technology},
+  volume={7},
+  pages={33--48},
+  year={1999},
+  publisher={University Computing Centre Zagreb}
+}
+
+@inproceedings{Nowostawski1999,
+  title={Parallel genetic algorithm taxonomy},
+  author={Nowostawski, Mariusz and Poli, Riccardo},
+  booktitle={Knowledge-Based Intelligent Information Engineering Systems, 1999. Third International Conference},
+  pages={88--92},
+  year={1999},
+  organization={IEEE}
+}
