--- a/literature.bib
+++ b/literature.bib
@@ -201,17 +201,19 @@
 	url = {http://www.surf.nl/trendreportopeneducation2014}
 }
 
-@article{OECD2007,
+@techreport{OECD2007,
 	author = {{OECD}},
     year = 2007,
 	title ={{Giving Knowledge for Free: The Emergence of Open Educational Resources}},
     url = {http://www.oecd.org/edu/ceri/givingknowledgeforfreetheemergenceofopeneducationalresources.htm},
-	publisher = "OECD Publishing"
+	institution= {{OECD}}
 }
 
-@article{Johnson2013,
+@techreport{Johnson2013,
   title={The {NMC} horizon report: 2013 higher education edition},
   author={Johnson, Larry and Adams, Samantha and Cummins, Malcolm and Estrada, Victoria and Freeman, Alex and Ludgate, Holly},
+  institution={New Media Consortium},
+  type={},
   year={2013}
 }
 
@@ -272,12 +274,13 @@
   publisher={Springer}
 }
 
-@article{Hylen2012,
+@techreport{Hylen2012,
 	author = {Hyl\'{e}n, Jan and Damme, Dirk van and Mulder, Fred and D'Antoni,
 		Susan},
 	title = {{Open Educational Resources: Analysis of Responses to the OECD Country Questionnaire}},
 	doi = {http://dx.doi.org/10.1787/5k990rjhvtlv-en},
-	publisher = {OECD Publishing},
+	institution = {OECD},
+	type={},
 	year = {2012},
 	month = {06}
 }
@@ -425,11 +428,12 @@
   publisher={JSTOR}
 }
 
-@article{Marsh2006,
+@techreport{Marsh2006,
   title={Making sense of data-driven decision making in education},
   author={Marsh, Julie A and Pane, John F and Hamilton, Laura S},
   year={2006},
-  publisher={Rand Corporation}
+  type={},
+  institution={Rand Corporation}
 }
 
 @incollection{Latour2014,
@@ -526,7 +530,7 @@
 	year = {2014},
 	type = {JRC Scientific and policy reports},
 	institution = {{European Commission}},
-	doi = {10.2791/80171}
+	doi = {10.2791/80171},
 	url = {http://is.jrc.ec.europa.eu/pages/EAP/documents/201405JRC88304.pdf}
 }
 
@@ -619,11 +623,11 @@
 }
 
 @article{Vanlehn2006,
-  title={The behavior of tutoring systems}
-  author={instellingsoverstijgende anlehn, Kurt},
+  title={The behavior of tutoring systems},
+  author={Vanlehn, Kurt},
   journal={International journal of artificial intelligence in education},
   volume={16},
-  number={3}
+  number={3},
   pages={227--265},
   year={2006},
   publisher={IOS Press}
@@ -651,8 +655,7 @@
   title={Aha! version 2.0, more adaptation flexibility for authors},
   author={Aerts, Ad and Smits, David and Stash, Natalia and Bra, Paul De},
   booktitle={World Conference on E-Learning in Corporate, Government, Healthcare, and Higher Education},
-  volume={2002},
-  number={1},
+  volume={1},
   pages={240--246},
   year={2002}
 }
