Processed second batch of minor comments

--- a/cover.tex
+++ b/cover.tex
@@ -6,12 +6,11 @@
 % Paragraph box which restricts text to less than the width of the page
 \includegraphics[width=1.0\textwidth]{logo_uva}
 
-
 \begin{center}
 
 {\noindent\HUGE\bfseries  TutOER\\[0.250\baselineskip]}
 \vspace{0.01\textheight}\hrule\vspace{0.01\textheight}
-{\large \textit{
+{\Large \textsc{
 \SubTitle
 }}\\[0.5\baselineskip] % Tagline or further description
 
@@ -23,18 +22,17 @@ for the degree of\\[0.250\baselineskip]
 \vspace{0.1\textheight}
 {\large \textsc{Martin Sander Latour}\\
 sanderlatour@gmail.com\\
-{\small BSc Artificial Intelligence, Universiteit van Amsterdam, 2011
-}}\\[0.25\baselineskip] % Author name
-{\normalsize Supervisors: \textsc{Maarten van Someren} and \textsc{Diederik
-Roijers}}\\ % Author name
-
-
-
+%{\small BSc Artificial Intelligence, Universiteit van Amsterdam, 2011
+%}
+}%\\[0.25\baselineskip] % Author name
 \vfill
+{\normalsize Supervisors:\\[\baselineskip] \textsc{Maarten van Someren} and \textsc{Diederik
+Roijers}}\\ % Author name
 {\noindent Informatics Institute, Faculty of Science,\\
 Universiteit van Amsterdam \\
-Science Park 904, 1098 XH Amsterdam\\
-2014}
+Science Park 904, 1098 XH Amsterdam}
+\vfill
+\emph{Defended on 15th of August, 2014}
 
 \end{center}
 \endgroup}
