--- a/literature.bib
+++ b/literature.bib
@@ -719,3 +719,15 @@
   year={1999},
   organization={IEEE}
 }
+
+@article{Bouton1901,
+ title = {Nim, A Game with a Complete Mathematical Theory},
+ author = {Bouton, Charles L.},
+ journal = {Annals of Mathematics},
+ volume = {3},
+ number = {1/4},
+ series = {Second Series},
+ pages = {pp. 35-39},
+ year = {1901},
+ publisher = {Annals of Mathematics},
+}
