Added exam results, wrote intro for approach, and more.

--- a/thesis.tex
+++ b/thesis.tex
@@ -210,4 +210,8 @@
 \label{ax_simulation_convergence_data}
 \input{chapters/appendix_convergence_data.tex}
 
+\chapter{Experiment Exam Results}
+\label{ax_experiment_exam_results}
+\input{chapters/appendix_exam.tex}
+
 \end{document}
