Final edits made, this is the final version!

--- a/literature.bib
+++ b/literature.bib
@@ -111,7 +111,7 @@
 }
 
 @inproceedings{Brusilovsky1996,
-  title={ELM-ART: An intelligent tutoring system on World Wide Web},
+  title= {{ELM-ART: An intelligent tutoring system on World Wide Web}},
   author={Brusilovsky, Peter and Schwarz, Elmar and Weber, Gerhard},
   booktitle={Intelligent tutoring systems},
   pages={261--269},
@@ -226,7 +226,6 @@
 	issn = {1939-1382},
 	year = {2010},
 	pages = {83-84},
-	doi = {http://doi.ieeecomputersociety.org/10.1109/TLT.2010.11},
 	publisher = {IEEE Computer Society},
 	address = {Los Alamitos, CA, USA},
 }
@@ -506,7 +505,7 @@
 }
 
 @article{Hilton2010,
-  title={{The four ‘R’s of openness and ALMS analysis: frameworks for open educational resources}},
+  title={{The four 'R's of openness and ALMS analysis: frameworks for open educational resources}},
   author={Hilton III, John and Wiley, David and Stein, Jared and Johnson, Aaron},
   journal={Open Learning},
   volume={25},
@@ -528,14 +527,14 @@
 		Educational Resources (OER)}},
 	author = {Camilleri, A. F. and Ehlers, U. D. and Pawlowski, J.},
 	year = {2014},
-	type = {JRC Scientific and policy reports},
+	type = {{JRC Scientific and policy reports}},
 	institution = {{European Commission}},
 	doi = {10.2791/80171},
 	url = {http://is.jrc.ec.europa.eu/pages/EAP/documents/201405JRC88304.pdf}
 }
 
 @article{Weller2010,
-  title={Big and little OER},
+  title={{Big and little OER}},
   author={Weller, Martin},
   journal={2010 Proceedings. Barcelona: UOC, OU, BYU. [Accessed: 25/05/14].},
   url={http://hdl.handle.net/10609/4851},
@@ -571,7 +570,6 @@
 	volume={4321},
 	series={Lecture Notes in Computer Science},
 	editor={Brusilovsky, Peter and Kobsa, Alfred and Nejdl, Wolfgang},
-	doi={10.1007/978-3-540-72079-9_22},
 	title={{Open Corpus Adaptive Educational Hypermedia}},
 	publisher={Springer Berlin Heidelberg},
 	author={Brusilovsky, Peter and Henze, Nicola},
